# auth/openapi.yaml
@@ -37,3 +37,83 @@ paths:
                 required:
                   - ok
                   - serviceName
+  /signup:
+    post:
+      summary: Signup.
+      description: Signup.
+      operationId: signup
+      tags:
+        - Signup
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                email:
+                  type: string
+                password:
+                  type: string
+              required:
+                - name
+                - email
+                - password
+      responses:
+        '200':
+          description: Signup succeeded.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  ok:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: Successfully Signedup
+                required:
+                  - ok
+                  - message
+        '400':
+          $ref: '#/components/responses/400'
+        '500':
+          $ref: '#/components/responses/500'
+components:
+  responses:
+    '400':
+      description: An error occurred.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              ok:
+                type: boolean
+                example: false
+              message:
+                type: string
+                example: the request is invalid
+            required:
+              - ok
+              - message
+    '500':
+      description: |
+        An internal server error occurred.
+        In this case, try running the request later.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              ok:
+                type: boolean
+                example: false
+              message:
+                type: string
+                example: 'there was an error, please try again later'
+            required:
+              - ok
+              - message 
